--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
   },
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1",
-    "hbs": "^4.1.1",
-    "punkapi-javascript-wrapper": "^1.0.2"
+    "express": "4.17.1",
+    "hbs": "4.1.1",
+    "punkapi-javascript-wrapper": "1.0.2"
   }
 }
